<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.tchy.syh.custom.edittext.CustomEditText" />

        <variable
            name="vm"
            type="com.tchy.syh.userAccount.AccountCommonVm" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <com.tchy.syh.custom.toolbar.CustomToolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isShowRightButton="false"
                app:toolbarTitle="绑定手机"
                app:isShowLeftButton="true"
                app:leftButtonIcon="@mipmap/back_black_small"

                ></com.tchy.syh.custom.toolbar.CustomToolbar>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="24dp"
            >

            <com.tchy.syh.custom.edittext.CustomEditText
                android:id="@+id/et_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                app:inputType="number"
                app:text="@{vm.mobile}"
                app:hint="@string/mobile"
                app:label="手机号码："
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                />
            <com.tchy.syh.custom.edittext.CustomEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:inputType="text"
                app:isSupportSub="true"
                app:param="@{vm.mobile}"
                app:text="@{vm.verifyCode}"
                app:label="验证码："
                app:maxLength="6"
                app:hint="@string/verify_code"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_account"
                />

            <Button
                android:id="@+id/button3"
                style="@style/filledBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/submit"
                app:onClickCommand="@{vm.modifyMobile}"
               />
        </LinearLayout>
        </LinearLayout>
   </ScrollView>

</layout>