<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.tchy.syh.custom.edittext.CustomEditText" />

        <variable
            name="vm"
            type="com.tchy.syh.userAccount.userLogin.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/horizontal_edge_space"
            android:paddingLeft="@dimen/horizontal_edge_space"
            android:paddingRight="@dimen/horizontal_edge_space"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toTopOf="parent">
            <com.tchy.syh.custom.edittext.CustomEditText
                android:id="@+id/et_account"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                app:inputType="number"
                app:text="@{vm.userName}"
                app:hint="@string/mobile"
                app:icon="@mipmap/account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                 />
            <com.tchy.syh.custom.edittext.CustomEditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:inputType="text"
                app:isSupportSub="true"
                app:param="@{vm.userName}"
                app:text="@{vm.password}"
                app:maxLength="6"
                app:hint="@string/verify_code"
                app:icon="@mipmap/verify_code"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_account"
                />




            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
                android:src="@mipmap/group2"

                app:layout_constraintBottom_toTopOf="@+id/et_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />



            <!--<Button-->
            <!--android:id="@+id/button2"-->

            <!--style="@style/borderedBtn"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="10dp"-->
            <!--android:text="@string/reg"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--app:layout_constraintStart_toStartOf="parent"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/button3"-->
            <!--app:onClickCommand="@{vm.regClickCmd}" />-->

            <Button
                android:id="@+id/button3"
                style="@style/filledBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/login_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:onClickCommand="@{vm.loginMobileOnClickCommand}" />

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginLeft="40dp"
                android:background="#ccc"
                app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                app:layout_constraintEnd_toStartOf="@+id/imageView3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView3" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:src="@mipmap/weixinlogin"
                app:onClickCommand="@{vm.gotoWeixinLoginClickCmd}"
                app:layout_constraintEnd_toStartOf="@+id/view1"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/view"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <View
                android:id="@+id/view1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginRight="40dp"
                android:background="#ccc"
                app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="@+id/imageView3" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/account_login"
                android:textSize="14sp"
                android:focusable="false"
                android:clickable="true"
                app:onClickCommand="@{vm.gotoMobileClickCmd}"
                android:textColor="#555"
                app:layout_constraintStart_toStartOf="@+id/et_password"
                app:layout_constraintTop_toBottomOf="@+id/et_password" />

            <!--<TextView-->
                <!--android:id="@+id/textView2"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="8dp"-->
                <!--android:text="@string/forget_pwd"-->
                <!--android:focusable="false"-->

                <!--android:textColor="#555"-->
                <!--app:layout_constraintEnd_toEndOf="@+id/et_password"-->
                <!--app:layout_constraintTop_toBottomOf="@+id/et_password" />-->

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="12sp"
                android:text="@string/third_party_login"
                app:layout_constraintEnd_toEndOf="@+id/imageView3"
                app:layout_constraintStart_toStartOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/button3" />


        </androidx.constraintlayout.widget.ConstraintLayout></ScrollView>

</layout>